New in master
=============

Features
--------

* New METADATA_FORMAT option to choose preferred metadata format 
  (Nikola/YAML/TOML/Pelican) (Part of Issue #2801)
* Extract metadata from HTML meta and title tags like Pelican (Issue #1923)

New in v7.8.7
=============

In an effort to improve interoperability with other static site
generators, make importing data easier, and help with world
domination, Nikola v7.8.7 ships with support for the following
metadata formats:

* reST-style comments (``.. name: value`` — default format)
* Two-file format (reST-style comments or 7-line)
* Jupyter Notebook metadata
* YAML, between ``---`` (Jekyll, Hugo)
* TOML, between ``+++`` (Hugo)
* reST docinfo (Pelican)
* Markdown metadata extension (Pelican)

In addition, Markdown is now enabled and required by default.
More details: <https://getnikola.com/handbook.html#metadata-formats>

The release also fixes two important bugs, one that crashes when
trying to detect locale in some edge cases, and another which made
some themes quietly leak template files.  If you’re using a
Jinja2-based theme that does not have its own ``parent`` file, please
force a rebuild (``nikola build -a``).

Features
--------

* Enable markdown by default (part of Issue #2809)
* Allowing to register filters from plugins, and allowing to specify default
  filters as strings of the form ``filters.<name>`` (part of Issue #2475)
* Support ignoring assets via ``ignore_assets`` theme meta field
  (Issue #2812)
* Ignore unused Colorbox locales (Issue #2812)
* Accept tag metadata as lists for YAML/TOML (Issue #2801)
* Support for mapping metadata from other formats to Nikola names
  using the ``METADATA_MAPPING`` setting (Issue #2817)
* Support for reStructured text docinfo metadata with
  ``USE_REST_DOCINFO_METADATA`` option, defaulting to False (Issue #1923)
* New ``HIDE_REST_DOCINFO`` option, defaulting to False.
* Support for Markdown Metadata for Pelican compatibility by adding